--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -70,6 +70,9 @@
           "cancel": "No, keep trigger",
           "failure": "Failed to stop trigger."
         }
+      },
+      "stopped-event": {
+        "intro": "The floods trigger warning for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     },
     "drought": {
@@ -101,6 +104,9 @@
           "cancel": "No, keep trigger",
           "failure": "Failed to stop trigger."
         }
+      },
+      "stopped-event": {
+        "intro": "The drought trigger warning for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     },
     "heavy-rain": {
@@ -132,6 +138,9 @@
           "cancel": "No, keep alert",
           "failure": "Failed to stop alert."
         }
+      },
+      "stopped-event": {
+        "intro": "The heavy rainfall alert for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     },
     "typhoon": {
@@ -163,6 +172,9 @@
           "cancel": "No, keep trigger",
           "failure": "Failed to stop trigger."
         }
+      },
+      "stopped-event": {
+        "intro": "The typhoon trigger warning for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     },
     "dengue": {
@@ -194,6 +206,9 @@
           "cancel": "No, keep alert",
           "failure": "Failed to stop alert."
         }
+      },
+      "stopped-event": {
+        "intro": "The dengue alert for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     },
     "malaria": {
@@ -225,6 +240,9 @@
           "cancel": "No, keep alert",
           "failure": "Failed to stop alert."
         }
+      },
+      "stopped-event": {
+        "intro": "The malaria alert for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
       }
     }
   },
